Changes in version 1.0.257
==========================

------------------------------------
Mishandled or unimplemented features
------------------------------------

- Migrate a lone locator at the end of a parallel
  series of legal_case references to the same case
  (by title) to first position. Needed for the OSCOLA
  style, in which subsequent parallels disappear in
  subsequent references.

==========================
Changes in version 1.0.256
==========================

------------------------------------
Mishandled or unimplemented features
------------------------------------

- Remove DOMParser declaration from xmldom.js,
  that wasn't deleted in the earlier change.

==========================
Changes in version 1.0.255
==========================

------------------------------------
Mishandled or unimplemented features
------------------------------------

- Fix abbreviations fallback. "default" entries
  and senior jurisdiction abbreviations will be
  applied to juniors, and copied to them for
  editing.


==========================
Changes in version 1.0.254
==========================

------------------------------------
Mishandled or unimplemented features
------------------------------------

- Implement year ranges in institutional abbreviations,
  for use in generating official reporter names for
  legal cases.


==========================
Changes in version 1.0.253
==========================

------------------------------------
Mishandled or unimplemented features
------------------------------------

- Do not throw a warning to output if parallel cite
  truncation results in an empty cite, and quash superfluous
  delimiters for cites that render empty in this case.

- Remove ActiveXObject and XMLHttpRequest var declarations
  from xmldom.js. These had bad side effects because a var
  declaration of a global function wipes out the function
  within the scope. Go figure.


==========================
Changes in version 1.0.252