@@ -1,8 +1,56 @@
 dojo.require("doh.runner");
-doh.register("run.parallel_TrailingIbid", [
-    function(){
-        var test = new StdRhinoTest("parallel_TrailingIbid","run");
-        doh.assertEqual(test.result, test.run());
-    },
-])
+dojo.require("std.substitute");
+dojo.require("std.magic");
+dojo.require("std.number");
+dojo.require("std.locator");
+dojo.require("std.language");
+dojo.require("std.eclac");
+dojo.require("std.sortseparator");
+dojo.require("std.generate");
+dojo.require("std.spaces");
+dojo.require("std.plural");
+dojo.require("std.testers");
+dojo.require("std.integration");
+dojo.require("std.initials");
+dojo.require("std.page");
+dojo.require("std.disambiguate");
+dojo.require("std.etal");
+dojo.require("std.bibsection");
+dojo.require("std.locale");
+dojo.require("std.style-as");
+dojo.require("std.quotes");
+dojo.require("std.api");
+dojo.require("std.simplespace");
+dojo.require("std.unicode");
+dojo.require("std.flipflop");
+dojo.require("std.citeprocjs");
+dojo.require("std.dateparser");
+dojo.require("std.nameorder");
+dojo.require("std.textcase");
+dojo.require("std.label");
+dojo.require("std.bugreports");
+dojo.require("std.layout");
+dojo.require("std.nameattr");
+dojo.require("std.punctuation");
+dojo.require("std.bibheader");
+dojo.require("std.display");
+dojo.require("std.group");
+dojo.require("std.institutions");
+dojo.require("std.form");
+dojo.require("std.condition");
+dojo.require("std.affix");
+dojo.require("std.date");
+dojo.require("std.decorations");
+dojo.require("std.multilingual");
+dojo.require("std.namespaces");
+dojo.require("std.variables");
+dojo.require("std.sort");
+dojo.require("std.parallel");
+dojo.require("std.virtual");
+dojo.require("std.fullstyles");
+dojo.require("std.discretionary");
+dojo.require("std.collapse");
+dojo.require("std.name");
+dojo.require("std.position");
+dojo.require("std.abbrevs");
 tests.run();
